Version 0.104 - 15 May 2013, by Per Øyvind Karlsen <proyvind@moondrake.net>

- install drakx-update-background (in /usr/sbin)
- never fallback to guessing display resolution from display size or
  forcing it to 1024x768, instead fallback to automatic display mode
  (mga#9934)
- select the preferred timing in case of multiple detailed timings
  in EDID (mga#9934)

Version 0.103 - 25 April 2013, by Per Øyvind Karlsen <peroyvind@mandriva.org>

- only install kernel-devel package if proprietary drivers are selected
- fix breakage in display_driver_helper due to missing ']'

Version 0.102 - 31 March 2013, by Per Øyvind Karlsen <peroyvind@mandriva.org>

- fix detecting whether X11 is started on boot or not (mga#3618)
- fix enabling of CTRL+ALT+BACKSPACE termination again

Version 0.101 - 25 Februar 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>

- use 'es-latin1' mapping instead of 'es' for asturian (mga#6639)
- keyboardrake:
  o german keyboard: default to variant with enabled deadkeys instead of
    "nodeadkeys variant" (mga#3791)
- display_driver_helper:
  o never select ums for radeon driver, it is not supported by current
    X11 driver anymore

Version 0.100 - 26 December 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>

- allow to select depth other than 16bit on Poulsbo (mga#5695)
- fix test background (Manuel Hiebel, mga#6349)
- keyboardrake:
  o german keyboard: default to variant with enabled deadkeys instead of
    "nodeadkeys variant" (mga#3791)

Vestion 0.99 - 26 December 2012 akdengi <akdengi>
- if driver radeon use package x11-driver-video-ati
- fix translate

* Thu Nov 27 2012 akdengi <akdengi> 0.97-1
- 0.97
- Change Quit to Apply settings. Really delete xorg.conf for non-proprietary drivers
- Skip test. Not write Xorg.conf, only for proprietary blobs
- Not need detect XAA/EXA - all card since XServer 13 use EXA only
- Use Plug'n'play as default to all. Not need detect oldest devices