@@ -131,7 +131,7 @@ sub set_mice {
 sub _is_mouse {
     my ($entry) = @_;
     my $Driver = val($entry->{Driver});
-    member($Driver, qw(mouse vboxmouse vmmouse)) || $Driver eq 'evdev' && !val($entry->{XkbLayout});
+    member($Driver, qw(mouse vmmouse)) || $Driver eq 'evdev' && !val($entry->{XkbLayout});
 }
 sub _new_mouse_sections {
     my ($raw_X, @Drivers) = @_;
