@@ -1,3 +1,5 @@
+- drop support for dead vboxmouse driver
+
 Version 0.104 - 15 May 2013, by Per Øyvind Karlsen <proyvind@moondrake.net>
 
 - install drakx-update-background (in /usr/sbin)
